--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,8 @@ jobs:
             - name: Run eslint
               run: npm run lint
             - name: Debug Network Connectivity
-              run: echo "Checking Internet Access..."
+              run: |
+                   echo "Checking Internet Access..."
                    ping -c 4 google.com || echo "No internet access"
                    echo "Checking DNS Resolution..."
                    nslookup google.com || echo "DNS resolution failed"
