--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A user management service",
     "main": "index.js",
     "scripts": {
-        "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
+        "dev": "cross-env NODE_ENV=dev nodemon -L src/server.ts",
         "build": "tsc --project tsconfig.build.json",
         "format:check": "prettier . --check",
         "format:fix": "prettier . --write",
